[package]
name = "c2ncl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard-next = "0.14.7"
clap = { version = "4.2.2", features = ["derive"] }
derive_builder = "0.12.0"
docker-compose-types = "0.4.1"
nanocl_stubs = { version = "0.5.0", features = ["serde"] }
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
