[package]
name = "c2ncl"
version = "0.0.1"
edition = "2021"
authors = ["Next Hat Contributors <team@next-hat.com>"]
description = "Converts docker-compose.yml to nanocl StateFile.yml"
readme = "README.md"

# Profile optimised for binary size
[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.71"
bollard-next = "0.14.7"
clap = { version = "4.2.2", features = ["derive"] }
derive_builder = "0.12.0"
docker-compose-types = "0.4.1"
nanocl_stubs = { version = "0.6.0", features = ["serde"] }
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
